[Jacoco-0][Monk] fix code

--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
             </goals>
             <configuration>
               <dataFile>target/jacoco.exec</dataFile>
-              <outputDirectory>target/jacoco-ut</outputDirectory>
+              <outputDirectory>target/jacoco-report</outputDirectory>
             </configuration>
           </execution>
         </executions>
