--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: java
 jdk:
   - oraclejdk8
+install: mvn install -DskipTests=true -Dmaven.javadoc.skip=true
 script:
   - mvn clean compile
+  - mvn package
